# mlx-lm-server

./: pyproject.toml
src/mlx_lm_server/: main.py
