[project]
name = "mlx-lm-server"
version = "0.1.0"
description = ""
authors = [
    {name = "okdshin", email = "kokuzen@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "mlx-lm",
]

[project.scripts]
llamacpp-proxy = "llamacpp_proxy.main:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_lm_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
